Updated blog post list

--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,23 @@
+- 'time': '2012-03-06T21:54:00Z'
+  'author': 'michael'
+  'path': '2012/3/cabal-nirvana.html'
+  'title': 'Avoid cabal hell: find nirvana'
+- 'time': '2012-03-06T00:14:00Z'
+  'author': 'greg'
+  'path': '2012/3/history-of-persistence.html'
+  'title': 'A History of Haskell persistence'
+- 'time': '2012-03-03T21:02:00Z'
+  'author': 'michael'
+  'path': '2012/3/more-pure-conduit.html'
+  'title': 'More Pure Conduit (and benchmarks!)'
+- 'time': '2012-03-02T07:34:00Z'
+  'author': 'michael'
+  'path': '2012/3/more-powerful-conduit.html'
+  'title': 'A More Powerful Conduit'
+- 'time': '2012-02-23T23:15:00Z'
+  'author': 'michael'
+  'path': '2012/2/simplifying-resourcet.html'
+  'title': 'Conduits: Simplifying ResourceT'
 - 'time': '2012-02-15T16:17:00Z'
   'author': 'greg'
   'path': '2012/2/call-for-gsoc-2012.html'
