--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- 'time': '2012-03-15T16:01:00Z'
+  'author': 'michael'
+  'title': 'Announcing the Yesod Platform'
+  'path': '2012/3/announcing-yesod-platform.html'
 - 'time': '2012-03-12T16:01:00Z'
   'author': 'greg'
   'title': 'Shelly: Write your shell scripts in Haskell '
