conduit 0.3.0 blog post

--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- 'time': '2012-03-21T16:01:00Z'
+  'author': 'michael'
+  'title': 'Announcing conduit 0.3'
+  'path': '2012/3/announcing-conduit-0-3.md'
 - 'time': '2012-03-15T16:01:00Z'
   'author': 'michael'
   'title': 'Announcing the Yesod Platform'
