--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- 'time': '2012-03-23T16:01:00Z'
+  'author': 'michael'
+  'title': 'Starting the Mezzo Haskell Book'
+  'path': '2012/3/start-mezzo-haskell.md'
 - 'time': '2012-03-21T16:01:00Z'
   'author': 'michael'
   'title': 'Announcing conduit 0.3'
