--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- 'time': '2012-03-26T16:01:00Z'
+  'author': 'michael'
+  'title': 'pipes-like conduit'
+  'path': '2012/3/pipes-like-conduit.md'
 - 'time': '2012-03-23T16:01:00Z'
   'author': 'michael'
   'title': 'Starting the Mezzo Haskell Book'
