Added a blog post

--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- 'time': '2012-03-28T16:01:00Z'
+  'author': 'michael'
+  'title': 'Summarizing the conduit questions'
+  'path': '2012/3/summarizing-conduit-questions.md'
 - 'time': '2012-03-26T16:01:00Z'
   'author': 'michael'
   'title': 'pipes-like conduit'
