Added blog post

--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- 'time': '2012-04-01T16:01:00Z'
+  'author': 'michael'
+  'title': 'Replacing Cabal'
+  'path': '2012/4/replacing-cabal.md'
 - 'time': '2012-03-28T16:01:00Z'
   'author': 'michael'
   'title': 'Summarizing the conduit questions'
