--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,5 +1,5 @@
 - 'time': '2012-04-05T16:01:00Z'
-  'author': 'Greg Weber'
+  'author': 'greg'
   'title': 'Transcending to dependency heaven'
   'path': '2012/4/cabal-meta.md'
 - 'time': '2012-04-01T16:01:00Z'
