Yesod 1.0 release announcement

--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- 'time': '2012-04-09T16:01:00Z'
+  'author': 'everyone'
+  'title': 'Announcing Yesod 1.0'
+  'path': '2012/4/announcing-yesod-1-0.md'
 - 'time': '2012-04-05T16:01:00Z'
   'author': 'greg'
   'title': 'Transcending to dependency heaven'
