Make new post public

--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- 'time': '2012-04-10T16:01:00Z'
+  'author': 'michael'
+  'title': 'Working Together'
+  'path': '2012/4/working-together.md'
 - 'time': '2012-04-09T16:01:00Z'
   'author': 'everyone'
   'title': 'Announcing Yesod 1.0'
