--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- 'time': '2012-04-17T16:01:00Z'
+  'author': 'michael'
+  'title': 'Many ways to skin a conduit'
+  'path': '2012/4/skinning-conduits.md'
 - 'time': '2012-04-10T16:01:00Z'
   'author': 'michael'
   'title': 'Working Together'
