Make new post live

--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- 'time': '2012-04-19T16:01:00Z'
+  'author': 'michael'
+  'title': 'A Debugging Adventure: OpenID'
+  'path': '2012/4/debugging-openid.md'
 - 'time': '2012-04-17T16:01:00Z'
   'author': 'michael'
   'title': 'Many ways to skin a conduit'
