--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,6 +1,6 @@
 - 'time': '2012-04-22T16:01:00Z'
   'author': 'michael'
-  'title': 'Client Side Yesod'
+  'title': 'Client Side Yesod, an FRP-inspired approach'
   'path': '2012/4/client-side.md'
 - 'time': '2012-04-19T16:01:00Z'
   'author': 'michael'
