Keter blog post

--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- 'time': '2012-05-11T16:01:00Z'
+  'author': 'michael'
+  'title': 'Keter: Web App Deployment'
+  'path': '2012/5/keter-app-deployment.md'
 - 'time': '2012-04-23T16:01:00Z'
   'author': 'michael'
   'title': 'More Client Side Yesod: todo sample'
