--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,5 +1,9 @@
 - 'time': '2012-05-17T16:01:00Z'
   'author': 'michael'
+  'title': 'Response to "Conduit Bugs"'
+  'path': '2012/5/response-conduit-bugs.md'
+- 'time': '2012-05-17T16:01:00Z'
+  'author': 'michael'
   'title': 'Keter: It''s Alive!'
   'path': '2012/5/keter-its-alive.md'
 - 'time': '2012-05-11T16:01:00Z'
