--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,4 +1,8 @@
-- 'time': '2012-05-17T16:01:00Z'
+- 'time': '2012-05-29T16:01:00Z'
+  'author': 'michael'
+  'title': 'Next set of conduit changes'
+  'path': '2012/5/next-conduit-changes.md'
+- 'time': '2012-05-28T16:01:00Z'
   'author': 'michael'
   'title': 'Response to "Conduit Bugs"'
   'path': '2012/5/response-conduit-bugs.md'
