--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- 'time': '2012-06-01T16:01:00Z'
+  'author': 'michael'
+  'title': 'Updated conduit docs'
+  'path': '2012/6/updated-conduit-docs.md'
 - 'time': '2012-05-29T16:01:00Z'
   'author': 'michael'
   'title': 'Next set of conduit changes'
