--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- 'time': '2012-06-08T16:01:00Z'
+  'author': 'michael'
+  'title': 'Complicating conduit?'
+  'path': '2012/6/complicating-conduit.md'
 - 'time': '2012-06-01T16:01:00Z'
   'author': 'michael'
   'title': 'Updated conduit docs'
