--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- 'time': '2012-06-12T16:01:00Z'
+  'author': 'michael'
+  'title': 'Position information in attoparsec'
+  'path': '2012/6/attoparsec-position.md'
 - 'time': '2012-06-08T16:01:00Z'
   'author': 'michael'
   'title': 'Complicating conduit?'
