conduit 0.5 release announcement

--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- 'time': '2012-06-29T16:01:00Z'
+  'author': 'michael'
+  'title': 'conduit 0.5: announcement and example'
+  'path': '2012/6/conduit-0-5.md'
 - 'time': '2012-06-12T16:01:00Z'
   'author': 'michael'
   'title': 'Position information in attoparsec'
