--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- 'time': '2012-07-05T16:01:00Z'
+  'author': 'michael'
+  'title': 'Yesod''s new logging system'
+  'path': '2012/7/new-logging-system.md'
 - 'time': '2012-06-29T16:01:00Z'
   'author': 'michael'
   'title': 'conduit 0.5: announcement and example'
