classy-prelude post is live

--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,7 +1,7 @@
-- 'time': '2012-10-10T16:01:00Z'
-  'author': 'greg'
-  'title': 'The Haskell Virtual Machine'
-  'path': '2012/7/haskell-vm.md'
+- 'time': '2012-07-12T16:01:00Z'
+  'author': 'michael'
+  'title': 'The classy prelude'
+  'path': '2012/7/classy-prelude.md'
 - 'time': '2012-07-10T16:01:00Z'
   'author': 'greg'
   'title': 'The Haskell Virtual Machine'
