--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- 'time': '2012-07-13T16:01:00Z'
+  'author': 'michael'
+  'title': 'Announcing WAI 1.3'
+  'path': '2012/7/announcing-wai-1-3.md'
 - 'time': '2012-07-12T16:01:00Z'
   'author': 'michael'
   'title': 'The classy prelude'
