--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- 'time': '2012-07-14T16:01:00Z'
+  'author': 'michael'
+  'title': 'Announcing baseless-assertion 0.1'
+  'path': '2012/7/announcing-baseless-assertion.md'
 - 'time': '2012-07-13T16:01:00Z'
   'author': 'michael'
   'title': 'Announcing WAI 1.3'
