--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- 'time': '2012-07-16T16:01:00Z'
+  'author': 'michael'
+  'title': 'Clarification: classy prelude'
+  'path': '2012/7/clarification-classy-prelude.md'
 - 'time': '2012-07-14T16:01:00Z'
   'author': 'michael'
   'title': 'Announcing baseless-assertion 0.1'
