ResumableSource blog post

--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- 'time': '2012-07-22T16:01:00Z'
+  'author': 'michael'
+  'title': 'conduit 0.5: ResumableSource and finalization'
+  'path': '2012/7/resumablesource.md'
 - 'time': '2012-07-16T16:01:00Z'
   'author': 'michael'
   'title': 'Clarification: classy prelude'
