--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- 'time': '2012-07-27T16:01:00Z'
+  'author': 'greg'
+  'title': 'State of the Shelly (Haskell scripting lib)'
+  'path': '2012/7/shelly-update.md'
 - 'time': '2012-07-22T16:01:00Z'
   'author': 'michael'
   'title': 'conduit 0.5: ResumableSource and finalization'
