--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- 'time': '2012-08-03T16:01:00Z'
+  'author': 'michael'
+  'title': 'ClassyPrelude: The good, the bad, and the ugly'
+  'path': '2012/8/classy-prelude-good-bad-ugly.md'
 - 'time': '2012-07-27T16:01:00Z'
   'author': 'greg'
   'title': 'State of the Shelly (Haskell scripting lib)'
