--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- 'time': '2012-08-06T16:01:00Z'
+  'author': 'michael'
+  'title': 'O''Reilly Webinar: Designing Type-Safe Haskell APIs'
+  'path': '2012/8/webinar-oreilly.md'
 - 'time': '2012-08-03T16:01:00Z'
   'author': 'michael'
   'title': 'ClassyPrelude: The good, the bad, and the ugly'
