--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- 'time': '2012-08-13T16:01:00Z'
+  'author': 'michael'
+  'title': 'Joining forces to advance Haskell'
+  'path': '2012/8/joining-forces-advance-haskell.md'
 - 'time': '2012-08-07T16:01:00Z'
   'author': 'michael'
   'title': 'Announcing: Yesod 1.1, Persistent 1.0, and a new initiative'
