--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- 'time': '2012-09-07T16:01:00Z'
+  'author': 'michael'
+  'title': 'Small status update'
+  'path': '2012/9/small-status-update.md'
 - 'time': '2012-08-13T16:01:00Z'
   'author': 'michael'
   'title': 'Joining forces to advance Haskell'
