--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- 'time': '2012-09-12T16:01:00Z'
+  'author': 'michael'
+  'title': 'Building a Haskell IDE'
+  'path': '2012/9/building-haskell-ide.md'
 - 'time': '2012-09-07T16:01:00Z'
   'author': 'michael'
   'title': 'Small status update'
