--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- 'time': '2012-09-13T16:01:00Z'
+  'author': 'kazu'
+  'title': 'Improving the performance of Warp'
+  'path': '2012/9/improving-warp.md'
 - 'time': '2012-09-12T16:01:00Z'
   'author': 'michael'
   'title': 'Building a Haskell IDE'
