Adding "Sending header and body at once".

--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- 'time': '2012-09-19T16:01:00Z'
+  'author': 'kazu'
+  'title': 'Sending header and body at once'
+  'path': '2012/9/header-body.md'
 - 'time': '2012-09-13T16:01:00Z'
   'author': 'kazu'
   'title': 'Improving the performance of Warp'
