--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- 'time': '2012-10-02T16:01:00Z'
+  'author': 'michael'
+  'title': 'Generics example: creating Monoid instances'
+  'path': '2012/10/generic-monoid.md'
 - 'time': '2012-10-01T16:01:00Z'
   'author': 'kazu'
   'title': 'Avoiding system calls'
