--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- 'time': '2012-10-04T16:01:00Z'
+  'author': 'michael'
+  'title': 'Yesod composability: a jqPlot widget'
+  'path': '2012/10/jqplot-widget.md'
 - 'time': '2012-10-02T16:01:00Z'
   'author': 'michael'
   'title': 'Generics example: creating Monoid instances'
