--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- 'time': '2012-10-16T09:00:00Z'
+  'author': 'kazu'
+  'title': 'Measuring the performance of warp'
+  'path': '2012/10/measuring-warp.md'
 - 'time': '2012-10-15T09:00:00Z'
   'author': 'michael'
   'title': 'yesod-pure: Use Yesod without Template Haskell'
