--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,6 +1,6 @@
 - 'time': '2012-10-16T09:00:00Z'
   'author': 'kazu'
-  'title': 'Measuring the performance of warp'
+  'title': 'Measuring the performance of Warp'
   'path': '2012/10/measuring-warp.md'
 - 'time': '2012-10-15T09:00:00Z'
   'author': 'michael'
