--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- 'time': '2012-10-19T09:00:00Z'
+  'author': 'arash'
+  'title': 'Haskell and Continious Integration'
+  'path': '2012/10/haskell-and-ci.md'
 - 'time': '2012-10-16T09:00:00Z'
   'author': 'kazu'
   'title': 'Measuring the performance of Warp'
