--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- 'time': '2012-10-25T04:44:00Z'
+  'author': 'michael'
+  'title': 'Keter updates'
+  'path': '2012/10/keter-updates.md'
 - 'time': '2012-10-22T09:00:00Z'
   'author': 'kazu'
   'title': 'Future work to improve the performance of Warp'
