Blog post is live

--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- 'time': '2012-10-30T16:44:00Z'
+  'author': 'michael'
+  'title': 'Yesod, AngularJS and Fay'
+  'path': '2012/10/yesod-fay-js.md'
 - 'time': '2012-10-25T04:44:00Z'
   'author': 'michael'
   'title': 'Keter updates'
