--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- 'time': '2012-11-07T16:44:00Z'
+  'author': 'michael'
+  'title': 'Changes to scaffolding system'
+  'path': '2012/11/changes-scaffolding-system.md'
 - 'time': '2012-10-30T16:44:00Z'
   'author': 'michael'
   'title': 'Yesod, AngularJS and Fay'
