--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- 'time': '2012-11-11T11:36:00Z'
+  'author': 'michael'
+  'title': 'Solving Cabal Hell'
+  'path': '2012/11/solving-cabal-hell.md'
 - 'time': '2012-11-07T16:44:00Z'
   'author': 'michael'
   'title': 'Changes to scaffolding system'
