Warp POSA chapter

--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- 'time': '2012-11-14T07:00:00Z'
+  'author': 'michael'
+  'title': 'Warp chapter for Performance of Open Source Applications'
+  'path': '2012/11/warp-posa.md'
 - 'time': '2012-11-11T11:36:00Z'
   'author': 'michael'
   'title': 'Solving Cabal Hell'
