--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- 'time': '2012-11-16T08:00:00Z'
+  'author': 'michael'
+  'title': 'Updates to Julius Interpolation'
+  'path': '2012/11/updates-julius-interpolation.md'
 - 'time': '2012-11-14T07:00:00Z'
   'author': 'michael'
   'title': 'Warp chapter for Performance of Open Source Applications'
