Blog post is live

--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- 'time': '2012-11-30T05:30:00Z'
+  'author': 'michael'
+  'title': 'Stable, Vetted Hackage: Call for Participation'
+  'path': '2012/11/stable-vetted-hackage.md'
 - 'time': '2012-11-16T08:00:00Z'
   'author': 'michael'
   'title': 'Updates to Julius Interpolation'
