--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- 'time': '2012-12-11T11:30:00Z'
+  'author': 'michael'
+  'title': 'Simplified Persistent Types'
+  'path': '2012/12/simplified-persistent-types.md'
 - 'time': '2012-11-30T05:30:00Z'
   'author': 'michael'
   'title': 'Stable, Vetted Hackage: Call for Participation'
