Published blog post

--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- 'time': '2013-01-02T11:30:00Z'
+  'author': 'michael'
+  'title': 'So many preludes!'
+  'path': '2013/01/so-many-preludes.md'
 - 'time': '2012-12-11T11:30:00Z'
   'author': 'michael'
   'title': 'Simplified Persistent Types'
