--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- 'time': '2013-01-17T11:30:00Z'
+  'author': 'michael'
+  'title': 'New goal: Yesod 1.2'
+  'path': '2013/01/new-goal-yesod-1-2.md'
 - 'time': '2013-01-02T11:30:00Z'
   'author': 'michael'
   'title': 'So many preludes!'
