--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2013-01-23T21:30:00Z
+  author: michael
+  title: The Meaning of Power
+  path: 2013/01/meaning-of-power.md
 - 'time': '2013-01-17T11:30:00Z'
   'author': 'michael'
   'title': 'New goal: Yesod 1.2'
