--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2013-01-30T13:30:00Z
+  author: michael
+  title: Cookbook: Adding CSS and Javascript
+  path: 2013/01/adding-css-js.md
 - time: 2013-01-23T21:30:00Z
   author: michael
   title: The Meaning of Power
