--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2013-01-31T13:30:00Z
+  author: michael
+  title: The School of Haskell
+  path: 2013/01/school-of-haskell.md
 - time: 2013-01-30T13:30:00Z
   author: michael
   title: 'Cookbook: Adding CSS and Javascript'
