Add copy of cookbook articles to blog.

--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,11 @@
+- time: 2013-02-04T20:42:32Z
+  author: paul
+  title: Authentication during Testing
+  path: 2013/02/authentication-for-testing.md
+- time: 2013-02-04T20:33:13Z
+  author: paul
+  title: Using Ajax with a Scaffolded Site
+  path: 2013/02/ajax-with-scaffold.md
 - time: 2013-01-31T13:30:00Z
   author: michael
   title: The School of Haskell
