Hide one blog post

--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,8 +1,8 @@
-- time: 2013-02-04T20:42:32Z
-  author: paul
-  title: Authentication during Testing
-  path: 2013/02/authentication-for-testing.md
-- time: 2013-02-04T20:33:13Z
+#- time: 2013-02-04T20:42:32Z
+#  author: paul
+#  title: Authentication during Testing
+#  path: 2013/02/authentication-for-testing.md
+- time: 2013-02-05T05:16:13Z
   author: paul
   title: Using Ajax with a Scaffolded Site
   path: 2013/02/ajax-with-scaffold.md
