--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,7 +1,7 @@
-#- time: 2013-02-04T20:42:32Z
-#  author: paul
-#  title: Authentication during Testing
-#  path: 2013/02/authentication-for-testing.md
+- time: 2013-02-06T16:42:32Z
+  author: paul
+  title: Authentication during Testing
+  path: 2013/02/authentication-for-testing.md
 - time: 2013-02-05T05:16:13Z
   author: paul
   title: Using Ajax with a Scaffolded Site
