--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2013-02-14T16:42:32Z
+  author: michael
+  title: Upcoming conduit 1.0
+  path: 2013/02/upcoming-conduit-1-0.md
 - time: 2013-02-06T16:42:32Z
   author: paul
   title: Authentication during Testing
