yesod-platform 1.1.8 release announcement

--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2013-03-04T16:42:32Z
+  author: michael
+  title: 'ANNOUNCE: yesod-platform 1.1.8'
+  path: 2013/03/yesod-platform-1-1-8.md
 - time: 2013-02-14T16:42:32Z
   author: michael
   title: 'ANNOUNCE: conduit 1.0, wai 1.4, and more'
