ResourceT overview blog post

--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2013-03-07T16:42:32Z
+  author: michael
+  title: ResourceT Overview
+  path: 2013/03/resourcet-overview.md
 - time: 2013-03-04T16:42:32Z
   author: michael
   title: 'ANNOUNCE: yesod-platform 1.1.8'
