--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2013-03-11T16:42:32Z
+  author: michael
+  title: "Yesod 1.2's cleaner internals"
+  path: 2013/03/yesod-1-2-cleaner-internals.md
 - time: 2013-03-07T16:42:32Z
   author: michael
   title: ResourceT Overview
