--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2013-03-15T16:42:32Z
+  author: michael
+  title: Big Subsite Rewrite
+  path: 2013/03/big-subsite-rewrite.md
 - time: 2013-03-11T16:42:32Z
   author: michael
   title: "Yesod 1.2's cleaner internals"
