--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2013-03-21T06:42:32Z
+  author: michael
+  title: Yesod dispatch, version 1.2
+  path: 2013/03/yesod-dispatch-version-1-2.md
 - time: 2013-03-15T16:42:32Z
   author: michael
   title: Big Subsite Rewrite
