--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2013-03-27T07:42:32Z
+  author: michael
+  title: Simpler streaming responses
+  path: 2013/03/simpler-streaming-responses.md
 - time: 2013-03-21T06:42:32Z
   author: michael
   title: Yesod dispatch, version 1.2
