--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2013-04-19T14:42:32Z
+  author: michael
+  title: Changes to the online book
+  path: 2013/04/changes-to-online-book.md
 - time: 2013-03-27T07:42:32Z
   author: michael
   title: Simpler streaming responses
