shakespeare-js update blog post

--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2013-04-22T19:00:00Z
+  author: greg
+  title: Shakespeare templating updates and TypeScript support
+  path: 2013/04/shakespeare-typescript.md
 - time: 2013-04-19T14:42:32Z
   author: michael
   title: Changes to the online book
