--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2013-04-24T12:00:00Z
+  author: michael
+  title: Mixin support in Lucius
+  path: 2013/04/mixin-support-in-lucius.md
 - time: 2013-04-23T12:00:00Z
   author: michael
   title: 'New chapter: Understanding a Request'
