--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2013-04-29T08:00:00Z
+  author: michael
+  title: Persistent 1.2 is out, last call on Yesod 1.2
+  path: 2013/04/persistent-1-2-out.md
 - time: 2013-04-24T12:00:00Z
   author: michael
   title: Mixin support in Lucius
