--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2013-05-02T13:00:00Z
+  author: greg
+  title: Yesod 1.2 released
+  path: 2013/05/yesod-1-2-released.md
 - time: 2013-04-29T08:00:00Z
   author: michael
   title: Persistent 1.2 is out, last call on Yesod 1.2
