--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2013-06-23T13:00:00Z
+  author: michael
+  title: First 11 chapters are Yesod 1.2-compliant
+  path: 2013/06/first-11-chapters.md
 - time: 2013-05-02T13:00:00Z
   author: greg
   title: Yesod 1.2 released
