--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,6 +1,6 @@
 - time: 2013-07-01T13:00:00Z
   author: michael
-  title: Runtime Lucius: now with mixins!
+  title: 'Runtime Lucius: now with mixins!'
   path: 2013/07/runtime-lucius-mixins.md
 - time: 2013-06-23T13:00:00Z
   author: michael
