--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2013-07-19T09:00:00Z
+  author: michael
+  title: Four more chapters ready
+  path: 2013/07/four-more-chapters.md
 - time: 2013-07-12T13:00:00Z
   author: michael
   title: Catching all exceptions
