--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2013-08-19T07:00:00Z
+  author: michael
+  title: Exceptions and monad transformers
+  path: 2013/08/exceptions-and-monad-transformers.md
 - time: 2013-07-19T09:00:00Z
   author: michael
   title: Four more chapters ready
