Publish blog post

--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2013-09-03T07:00:00Z
+  author: michael
+  title: lens-based classy-prelude
+  path: 2013/09/lens-based-classy-prelude.md
 - time: 2013-08-19T07:00:00Z
   author: michael
   title: Exceptions and monad transformers
