--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2013-09-08T12:00:00Z
+  author: michael
+  title: Yesod Platform version 1.2.4
+  path: 2013/09/yesod-platform-1-2-4.md
 - time: 2013-09-03T07:00:00Z
   author: michael
   title: lens-based classy-prelude
