--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2013-09-11T09:00:00Z
+  author: petr
+  title: ZipSinks and conduit-extra
+  path: 2013/09/zipsinks-conduit-extra.md
 - time: 2013-09-08T12:00:00Z
   author: michael
   title: Yesod Platform version 1.2.4
