--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2013-09-24T05:21:00Z
+  author: michael
+  title: Folding lines in conduit
+  path: 2013/09/folding-lines-conduit.md
 - time: 2013-09-11T09:00:00Z
   author: petr
   title: ZipSinks and conduit-extra
