Fix some quoting

--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,6 +1,6 @@
 - time: 2013-09-27T10:53:00Z
   author: greg
-  title: Announce: mono-traversable and classy-prelude 0.6
+  title: 'Announce: mono-traversable and classy-prelude 0.6'
   path: 2013/09/classy-mono.md
 - time: 2013-09-24T05:21:00Z
   author: michael
