--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2013-10-27T10:53:00Z
+  author: greg
+  title: 'Prelude replacements are for application developers'
+  path: 2013/10/prelude-replacements-libraries.md
 - time: 2013-09-27T10:53:00Z
   author: greg
   title: 'Announce: mono-traversable and classy-prelude 0.6'
