Publish a blog post

--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2013-10-07T06:25:00Z
+  author: michael
+  title: pipes resource problems
+  path: 2013/10/pipes-resource-problems.md
 - time: 2013-10-04T10:00:00Z
   author: michael
   title: A warning about segfaults
