Post an article

--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2013-10-09T06:25:00Z
+  author: michael
+  title: The core flaw of pipes and conduit
+  path: 2013/10/core-flaw-pipes-conduit.md
 - time: 2013-10-07T06:25:00Z
   author: michael
   title: pipes resource problems
