--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2013-10-10T06:25:00Z
+  author: michael
+  title: Simpler conduit core
+  path: 2013/10/simpler-conduit-core.md
 - time: 2013-10-09T06:25:00Z
   author: michael
   title: The core flaw of pipes and conduit
