Publish blog post

--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2013-11-13T04:57:00Z
+  author: michael
+  title: WAI 2.0 and http-client
+  path: 2013/11/wai-2-http-client.md
 - time: 2013-10-10T06:25:00Z
   author: michael
   title: Simpler conduit core
