--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2013-12-05T04:57:00Z
+  author: michael
+  title: 'Announcing: WAI 2.0 and http-client'
+  path: 2013/12/announcing-wai-2-http-client.md
 - time: 2013-11-13T04:57:00Z
   author: michael
   title: WAI 2.0 and http-client
