--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2013-12-10T08:57:00Z
+  author: michael
+  title: 'Book updates for 1.2: almost complete!'
+  path: 2013/12/book-updates-1-2.md
 - time: 2013-12-04T05:57:00Z
   author: michael
   title: 'Announcing: WAI 2.0 and http-client'
