--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2014-01-01T11:57:00Z
+  author: michael
+  title: Lens generator in Persistent
+  path: 2014/01/lens-generator-persistent.md
 - time: 2013-12-11T08:57:00Z
   author: michael
   title: 'Book fully updated for 1.2'
