--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2014-01-15T21:57:00Z
+  author: michael
+  title: "PSA: Please use yesod-platform"
+  path: 2014/01/psa-please-use-yesod-platform.md
 - time: 2014-01-01T11:57:00Z
   author: michael
   title: Lens generator in Persistent
