--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2014-01-16T12:40:00Z
+  author: michael
+  title: The ST monad and conduit
+  path: 2014/01/st-monad-conduit.md
 - time: 2014-01-15T21:57:00Z
   author: michael
   title: "PSA: Please use yesod-platform"
