--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2014-02-01T14:40:00Z
+  author: michael
+  title: PostgreSQL, UTCTime, and WITHOUT TIME ZONE
+  path: 2014/02/postgresql-utctime.md
 - time: 2014-01-31T13:00:00Z
   author: kazu
   title: "Faster and scalable fast-logger"
