posting the new-warp article.

--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2014-02-03T10:00:00Z
+  author: kazu
+  title: "Improving the performance of Warp again"
+  path: 2014/02/new-warp.md
 - time: 2014-01-31T10:00:00Z
   author: kazu
   title: "Faster and scalable fast-logger"
