--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2014-02-11T09:55:00Z
+  author: michael
+  title: Some ideas for pipes-parse
+  path: 2014/02/ideas-pipes-parse.md
 - time: 2014-02-04T06:41:00Z
   author: michael
   title: conduit 1.0.13 and ZipSource
