Publish blog post

--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2014-02-16T09:44:00Z
+  author: michael
+  title: Announcing mono-traversable, chunked-data, and conduit-combinators
+  path: 2014/02/announce-mono-chunked.md
 - time: 2014-02-11T09:55:00Z
   author: michael
   title: Some ideas for pipes-parse
