--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2014-02-27T15:20:00Z
+  author: michael
+  title: Module name conflicts on Hackage
+  path: 2014/02/module-name-conflicts.md
 - time: 2014-02-16T09:44:00Z
   author: michael
   title: Announcing mono-traversable, chunked-data, and conduit-combinators
