--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2014-03-05T18:44:00Z
+  author: michael
+  title: network-conduit, async, and conduit-combinators
+  path: 2014/03/network-conduit-async.md
 - time: 2014-02-27T13:20:00Z
   author: michael
   title: Module name conflicts on Hackage
