gsoc proposals blog post

--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2014-03-15T12:32:00Z
+  author: greg
+  title: Google Summer of Code proposals
+  path: 2014/03/gsoc-proposals.md
 - time: 2014-03-09T11:32:00Z
   author: michael
   title: WAI 2.1 and yesod-websockets
