--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2014-03-20T10:23:00Z
+  author: michael
+  title: Efficient directory traversals
+  path: 2014/03/efficient-directory-traversals.md
 - time: 2014-03-15T12:32:00Z
   author: greg
   title: Google Summer of Code proposals
