--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2014-03-25T08:07:00Z
+  author: michael
+  title: Package consolidation
+  path: 2014/03/package-consolidation.md
 - time: 2014-03-20T10:23:00Z
   author: michael
   title: Efficient directory traversals
