--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2014-04-03T07:07:00Z
+  author: michael
+  title: "Consolidation progress: shakespeare, conduit, http-client"
+  path: 2014/04/consolidation-progress.md
 - time: 2014-03-25T08:07:00Z
   author: michael
   title: Package consolidation
