--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2014-04-08T15:55:00Z
+  author: michael
+  title: "Proposal: Changes to the PVP"
+  path: 2014/04/proposal-changes-pvp.md
 - time: 2014-04-03T07:07:00Z
   author: michael
   title: "Consolidation progress: shakespeare, conduit, http-client"
