Post-dated blog entry

--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2014-04-28T10:51:00Z
+  author: michael
+  title: "Disemboweling WAI (aka gutting out conduit)"
+  path: 2014/04/disemboweling-wai.md
 - time: 2014-04-08T15:55:00Z
   author: michael
   title: "Proposal: Changes to the PVP"
