--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2014-05-05T10:51:00Z
+  author: michael
+  title: Foldable.mapM_, Maybe, and recursive functions
+  path: 2014/05/foldable-mapm-maybe-recursive.md
 - time: 2014-04-28T10:51:00Z
   author: michael
   title: "Disemboweling WAI (aka gutting out conduit)"
