--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2014-05-27T10:51:00Z
+  author: michael
+  title: WAI 3.0 alpha release
+  path: 2014/05/wai-3-0-alpha.md
 - time: 2014-05-05T10:51:00Z
   author: michael
   title: Foldable.mapM_, Maybe, and recursive functions
