--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2014-05-30T02:43:00Z
+  author: michael
+  title: Exceptions in continuation-based monads
+  path: 2014/05/exceptions-cont-monads.md
 - time: 2014-05-27T10:51:00Z
   author: michael
   title: WAI 3.0 alpha release
