--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2014-06-05T05:24:00Z
+  author: michael
+  title: GoogleEmail2 auth plugin
+  path: 2014/06/google-email2.md
 - time: 2014-05-30T02:43:00Z
   author: michael
   title: Exceptions in continuation-based monads
