--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2014-06-10T05:15:00Z
+  author: michael
+  title: Exceptions and monad transformers
+  path: 2014/06/exceptions-transformers.md
 - time: 2014-06-05T05:24:00Z
   author: michael
   title: GoogleEmail2 auth plugin
