--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2014-07-27T10:50:00Z
+  author: michael
+  title: Reading files from the proc filesystem
+  path: 2014/07/reading-files-proc-filesystem.md
 - time: 2014-07-10T07:15:00Z
   author: michael
   title: 'RFC: New Data.Conduit.Process'
