--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2014-08-06T07:10:00Z
+  author: michael
+  title: Announcing auto-update
+  path: 2014/08/announcing-auto-update.md
 - time: 2014-07-27T10:50:00Z
   author: michael
   title: Reading files from the proc filesystem
