Blog post: deprecating yesod-platform

--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2014-08-09T05:10:00Z
+  author: michael
+  title: Deprecating yesod-platform
+  path: 2014/08/deprecating-yesod-platform.md
 - time: 2014-08-06T07:10:00Z
   author: michael
   title: Announcing auto-update
