--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2014-08-29T21:46:13Z
+  author: greg
+  title: Announcing Persistent 2
+  path: 2014/08/announcing-persistent-2.md
 - time: 2014-08-09T05:10:00Z
   author: michael
   title: Deprecating yesod-platform
