Post-dated publishing of Yesod 1.4 post
Last call to @gregwebs to change the text.

--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2014-09-01T00:00:00Z
+  author: michael
+  title: Planning Yesod 1.4
+  path: 2014/09/planning-yesod-1-4.md
 - time: 2014-08-29T21:46:13Z
   author: greg
   title: Announcing Persistent 2
