Blog post for @erikd

--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2014-09-09T00:00:00Z
+  author: michael
+  title: Misassigned credit for conduit
+  path: 2014/09/misassigned-credit-for-conduit.md
 - time: 2014-09-01T00:00:00Z
   author: michael
   title: Planning Yesod 1.4
