--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2014-09-11T00:00:00Z
+  author: michael
+  title: Clarification of previous blog post
+  path: 2014/09/clarification-previous-blog-post.md
 - time: 2014-09-09T00:00:00Z
   author: michael
   title: Misassigned credit for conduit
