persistent 2.1 release candidate

--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2014-09-16T22:15:07Z
+  author: greg
+  title: Persistent 2.1 Release Candidate
+  path: 2014/09/persistent-2.1-rc.md
 - time: 2014-09-11T00:00:00Z
   author: michael
   title: Clarification of previous blog post
