--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2014-09-23T00:00:00Z
+  author: michael
+  title: The woes of multiple package versions
+  path: 2014/09/woes-multiple-package-versions.md
 - time: 2014-09-16T22:15:07Z
   author: greg
   title: Persistent 2.1 Release Candidate
