publish persistent 2.1 post

--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2014-09-29T23:51:38Z
+  author: greg
+  title: Persistent 2.1 released
+  path: 2014/09/persistent-2.1-released.md
 - time: 2014-09-23T00:00:00Z
   author: michael
   title: The woes of multiple package versions
