--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2014-09-30T11:00:00Z
+  author: greg
+  title: Announcing Yesod 1.4
+  path: 2014/09/announcing-yesod-1-4.md
 - time: 2014-09-29T23:51:38Z
   author: greg
   title: Persistent 2.1 released
