Publish blog post

--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2014-10-02T11:24:00Z
+  author: michael
+  title: Updating auto-update
+  path: 2014/10/updating-auto-update.md
 - time: 2014-09-30T11:00:00Z
   author: greg
   title: Announcing Yesod 1.4
