publish blog post

--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2014-10-06T02:50:45Z
+  author: greg
+  title: Haskell's Prelude is adding Foldable/Traversable
+  path: 2014/10/classy-base-prelude.md
 - time: 2014-10-02T11:24:00Z
   author: michael
   title: Updating auto-update
