New blog post: yesod-gitrepo

--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2014-10-29T13:16:45Z
+  author: michael
+  title: "Announcing: yesod-gitrepo"
+  path: 2014/10/yesod-gitrepo.md
 - time: 2014-10-06T02:50:45Z
   author: greg
   title: Haskell's Prelude is adding Foldable/Traversable
