--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2014-11-12T11:38:00Z
+  author: michael
+  title: "The case for curation: Stackage and the PVP"
+  path: 2014/11/case-for-curation.md
 - time: 2014-10-31T05:00:00Z
   author: michael
   title: "Slides on conduit and GHCJS"
