New scaffolding blog post
Pinging @gregwebs. I've future-dated the blog post, so it's not live
yet.

--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2014-12-01T06:00:00Z
+  author: michael
+  title: "Yesod's new scaffolding"
+  path: 2014/12/yesods-new-scaffolding.md
 - time: 2014-11-12T11:38:00Z
   author: greg
   title: "Installing application dependencies using Stackage, sandboxes, and freezing"
