--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2014-12-16T08:00:00Z
+  author: michael
+  title: "Minimal Yesod multifile site"
+  path: 2014/12/minimal-yesod-multifile-site.md
 - time: 2014-12-03T06:00:00Z
   author: michael
   title: "Yesod's new scaffolding"
