--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2014-12-21T18:50:00Z
+  author: michael
+  title: Hackage docs live again, please do the READMEs!
+  path: 2014/12/hackage-docs-live-again.md
 - time: 2014-12-20T14:30:00Z
   author: michael
   title: Use Stackage for docs
