PolyConf blog post

--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2014-01-25T14:30:00Z
+  author: michael
+  title: PolyConf 2015
+  path: 2015/01/polyconf-2015.md
 - time: 2014-12-21T18:50:00Z
   author: michael
   title: Hackage docs live again, please do the READMEs!
