--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2015-02-13T07:20:00Z
+  author: michael
+  title: The awesome Haskell community
+  path: 2015/02/awesome-haskell-community.md
 - time: 2015-02-09T16:16:00Z
   author: michael
   title: The brittle Haskell toolchain
