--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2015-03-10T09:17:00Z
+  author: michael
+  title: Designing APIs for Extensibility
+  path: 2015/03/designing-apis-for-extensibility.md
 - time: 2015-02-13T07:20:00Z
   author: michael
   title: The awesome Haskell community
