--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2015-04-17T04:00:00Z
+  author: michael
+  title: Announcing stackage-update
+  path: 2015/04/announcing-stackage-update.md
 - time: 2015-03-10T09:17:00Z
   author: michael
   title: Designing APIs for Extensibility
