Deprecating system-filepath

--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2015-05-47T04:00:00Z
+  author: michael
+  title: Deprecating system-filepath and system-fileio
+  path: 2015/05/deprecating-system-filepath.md
 - time: 2015-04-17T04:00:00Z
   author: michael
   title: Announcing stackage-update
