--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2015-06-11T08:00:00Z
+  author: michael
+  title: "cabal's does not exist error message"
+  path: 2015/06/cabals-does-not-exist-error-message.md
 - time: 2015-05-14T04:00:00Z
   author: michael
   title: Deprecating system-filepath and system-fileio
