Added blog post for yesod-table

--- a/blog/authors.yaml
+++ b/blog/authors.yaml
@@ -19,3 +19,6 @@ paul:
 petr:
   name: Petr Pudlák
   email: petr.mvd@gmail.com
+andrew:
+  name: Andrew Thaddeus Martin
+  email: andrew.thaddeus@gmail.com
