--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2015-07-06T00:00:00Z
+  author: andrew
+  title: yesod-table
+  path: 2015/07/yesod-table.md
 - time: 2015-06-29T00:00:00Z
   author: michael
   title: stack support for yesod devel
