Added my details to authors.yml added blog post details to posts.yaml   Added a contributing file.   Edited the README

--- a/blog/authors.yaml
+++ b/blog/authors.yaml
@@ -22,3 +22,6 @@ petr:
 andrew:
   name: Andrew Thaddeus Martin
   email: andrew.thaddeus@gmail.com
+njagi:
+  name: Njagi Mwaniki
+  email: njagi@urbanslug.com
