--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2015-07-22T16:23:00Z
+  author: njagi
+  title: yesod-devel
+  path: 2015/07/yesod-devel.md
 - time: 2015-07-06T00:00:00Z
   author: andrew
   title: yesod-table
