--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2015-07-23T04:05:00Z
+  author: kazu
+  title: "Supporting HTTP/2"
+  path: 2015/07/http2.md
 - time: 2015-07-22T12:00:00Z
   author: njagi
   title: yesod-devel
