--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2015-08-31T07:30:00Z
+  author: kazu
+  title: "Getting Rating A from the SSL Server Test"
+  path: 2015/08/ssl-server-test.md
 - time: 2015-08-28T13:00:00Z
   author: michael
   title: "Some thoughts on documentation"
