--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2015-09-18T03:00:00Z
+  author: michael
+  title: "The new runtime Hamlet API"
+  path: 2015/09/new-runtime-hamlet-api.md
 - time: 2015-08-31T00:45:00Z
   author: kazu
   title: "Getting Rating A from the SSL Server Test"
