Blog post: true root of the PVP debate

--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2015-09-24T12:45:00Z
+  author: michael
+  title: "The true root of the PVP debate"
+  path: 2015/09/true-root-pvp-debate.md
 - time: 2015-09-18T03:00:00Z
   author: michael
   title: "The new runtime Hamlet API"
