Publish blog post

--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2015-10-20T06:00:00Z
+  author: michael
+  title: "Using WAI's vault for fun and profit"
+  path: 2015/10/using-wais-vault.md
 - time: 2015-09-24T12:45:00Z
   author: michael
   title: "The true root of the PVP debate"
