--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2015-10-25T08:00:00Z
+  author: michael
+  title: "Resurrecting servius"
+  path: 2015/10/resurrecting-servius.md
 - time: 2015-10-20T06:00:00Z
   author: michael
   title: "Using WAI's vault for fun and profit"
