--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2015-10-31T07:30:00Z
+  author: michael
+  title: "Beginner friendly code and APIs"
+  path: 2015/10/beginner-friendly-code-and-apis.md
 - time: 2015-10-25T08:00:00Z
   author: michael
   title: "Resurrecting servius"
