--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2015-12-14T13:30:00Z
+  author: michael
+  title: "Yesod hosting with Docker and Kubernetes"
+  path: 2015/12/yesod-hosting-docker-kubernetes.md
 - time: 2015-10-30T07:30:00Z
   author: michael
   title: "Beginner friendly code and APIs"
